[WIP] Add FoodCalog, FoodOrder, User and send mail funtionality

--- a/ShopFood.Service/ShopFood.API/appsettings.json
+++ b/ShopFood.Service/ShopFood.API/appsettings.json
@@ -16,5 +16,15 @@
     "Issuer": "ShopFoodServices.com",
     "Audience": "ShopFoodServices",
     "ExpirationInMinutes": 60
+  },
+  "MailConfig": {
+    "Remittance": "comunicaciones_shopfoodservice@hotmail.com",
+    "Password": "Colombia2024*",
+    "DisplayName": "SHOP FOOD CONTACTO",
+    "Host": "smtp-mail.outlook.com",
+    "Port": 587,
+    "DefaultCredentials": false,
+    "EnableSSL": true,
+    "IsBodyHtml": true
   }
 }
