--- a/ShopFood.Service/ShopFood.Domain/ShopFood.Domain.csproj
+++ b/ShopFood.Service/ShopFood.Domain/ShopFood.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Templates\" />
+  </ItemGroup>
+
 </Project>
