--- a/ShopFood.Service/ShopFood.API/appsettings.Development.json
+++ b/ShopFood.Service/ShopFood.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ApiBaseUrl": "https://localhost:7128/api/v1/",
+  "TamplateConfirm": "ShopFood.Domain/Templates/FoodOrderConfirm.html",
+  "IsDevelopment": true
 }
