--- a/ShopFood.Service/ShopFood.API/appsettings.json
+++ b/ShopFood.Service/ShopFood.API/appsettings.json
@@ -7,9 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnectionStrings": "Server=DESKTOP-L0PAG08\\SQLEXPRESS;Database=dbShopFood ;Trusted_Connection=SSPI;MultipleActiveResultSets=true;Trust Server Certificate=true",
-
-    "AppInsightsConnectionString": ""
+    "DbConnectionStrings": "Server=tcp:server-shop-food.database.windows.net,1433;Initial Catalog=dbShopFood;Persist Security Info=False;User ID=admin-shop-food;Password=S3d7KKu@26Sgq8m;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Secret": "41F2744C-CDD4-4B96-A244-37FD8AA658EE",
@@ -19,12 +17,15 @@
   },
   "MailConfig": {
     "Remittance": "comunicaciones_shopfoodservice@hotmail.com",
-    "Password": "Colombia2024*",
+    "Password": "Mail",
     "DisplayName": "SHOP FOOD CONTACTO",
     "Host": "smtp-mail.outlook.com",
     "Port": 587,
     "DefaultCredentials": false,
     "EnableSSL": true,
     "IsBodyHtml": true
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=e5225098-23ce-4938-aafe-bf34db48ed69;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/;ApplicationId=ad206d4e-c25a-426c-8970-8e406389db14"
   }
 }
