--- a/ShopFood.Service/ShopFood.Application/ShopFood.Application.csproj
+++ b/ShopFood.Service/ShopFood.Application/ShopFood.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Azure.Identity" Version="1.11.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
     <PackageReference Include="Throw" Version="1.4.0" />
