--- a/ShopFood.Service/ShopFood.Domain/ShopFood.Domain.csproj
+++ b/ShopFood.Service/ShopFood.Domain/ShopFood.Domain.csproj
@@ -7,11 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+    <None Remove="Templates\FoodOrderConfirm.html" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Templates\" />
+    <Content Include="Templates\FoodOrderConfirm.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.11.2" />
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
