Documentation, Comlements fodd order and create user without securirty, and UT to user

--- a/ShopFood.Service/ShopFood.API/appsettings.Development.json
+++ b/ShopFood.Service/ShopFood.API/appsettings.Development.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DbConnectionStrings": "Server=DESKTOP-L0PAG08\\SQLEXPRESS;database=dbShopFood;uid=sa;pwd=123456789;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
   "ApiBaseUrl": "https://localhost:7128/api/v1/",
   "TamplateConfirm": "ShopFood.Domain/Templates/FoodOrderConfirm.html",
   "IsDevelopment": true
