--- a/ShopFood.Service/ShopFood.API/appsettings.Production.json
+++ b/ShopFood.Service/ShopFood.API/appsettings.Production.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DbConnectionStrings": "Server=tcp:server-shop-food.database.windows.net,1433;Initial Catalog=dbShopFood;Persist Security Info=False;User ID=admin-shop-food;Password=S3d7KKu@26Sgq8m;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "ApiBaseUrl": "https://shopfoodservices.azurewebsites.net/api/v1/",
   "TamplateConfirm": "wwwroot/Templates/FoodOrderConfirm.html",
   "IsDevelopment": false
